Fixed: Tasks Y Overflow

--- a/src/pages/Home/ui/TaskBoard/TaskBoard.module.scss
+++ b/src/pages/Home/ui/TaskBoard/TaskBoard.module.scss
@@ -1,7 +1,8 @@
 .board {
-  @apply h-full;
+  @apply overflow-hidden;
+  height: calc(100% - 86px);
   > .columns {
-    @apply h-full transition-all duration-300;
+    @apply h-full transition-all duration-300 overflow-y-auto;
 
     .column {
       @apply h-full w-80 flex flex-col gap-6;
